# xyz2lwo

./: .gitignore  .gitmodules  CMakeLists.txt
VisualStudio/: SiF6-2x2.xyz  test.xyz  xyz2lwo.sln  xyz2lwo.vcxproj  xyz2lwo.vcxproj.filters
xyz2lwo/: Chemical_Data.cpp  Chemical_Data.h  Chunk.cpp  Chunk.h  Chunk_BBOX.cpp  Chunk_BBOX.h  Chunk_FORM_LWO2.cpp  Chunk_FORM_LWO2.h  Chunk_LAYR.cpp  Chunk_LAYR.h  Chunk_PNTS.cpp  Chunk_PNTS.h  Chunk_POLS.cpp  Chunk_POLS.h  Chunk_PTAG.cpp  Chunk_PTAG.h  Chunk_SURF.cpp  Chunk_SURF.h  Chunk_TAGS.cpp  Chunk_TAGS.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  FileGenerator3D.cpp  FileGenerator3D.h  IFF.cpp  IFF.h  LWOB_Builder.cpp  LWOB_Builder.h  OBJ.cpp  OBJ.h  OBJ_group.cpp  OBJ_group.h  Object3D.h  Quaternion.cpp  Quaternion.h  Sphere.cpp  Sphere.h  Tube.cpp  (+7 more)
